--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
       </div>
     </header>
     <main id="main">
-      <section id="search">
-        <form action="">
-          <input type="search" name="search_product" id="search_product" />
-          <input type="submit" value="Buscar" />
-        </form>
-      </section>
       <section>
         <h1>Compra y vende artículos de segunda mano en Popjs</h1>
         <h2>una comunidad que lleva años generando impacto del bueno</h2>
@@ -36,6 +30,17 @@
           <li></li>
           <li></li>
         </ul>
+      </section>
+      <section id="search">
+        <form action="">
+          <input
+            type="search"
+            name="search_product"
+            placeholder="Buscar en todas las categorias"
+            id="search_product"
+          />
+          <input type="submit" value="Buscar" />
+        </form>
       </section>
       <section id="products_list">
         <div class="card"></div>
