Add styles for products list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Popjs</title>
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/index_style.css" />
   </head>
   <body>
     <header id="header">
@@ -20,7 +20,7 @@
     </header>
     <main id="main">
       <section>
-        <h1>Compra y vende artículos de segunda mano en Popjs</h1>
+        <h1>Compra y vende artículos de segunda mano en PopJS</h1>
         <h2>una comunidad que lleva años generando impacto del bueno</h2>
       </section>
       <section id="categories">
@@ -43,16 +43,221 @@
         </form>
       </section>
       <section id="products_list">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <div class="sell_or_search">
+              <img src="assets/sell.svg" alt="sell icon" />
+            </div>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
+        <div class="card">
+          <figure>
+            <div class="sell_or_search">
+              <img src="assets/search.svg" alt="search icon" />
+            </div>
+            <img
+              class="product_image"
+              src="assets/products/afeitadora.jpg"
+              alt="Afeitadora"
+            />
+          </figure>
+          <div class="text-content">
+            <div class="product_name">Shaver</div>
+            <div class="product_description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
+              aperiam accusantium facilis omnis quidem, quia architecto
+              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
+              deleniti repellat adipisci iste totam vero?
+            </div>
+            <div class="product_price">25€</div>
+          </div>
+        </div>
       </section>
     </main>
     <footer id="footer"></footer>
