fix css product detail page

--- a/product_detail.html
+++ b/product_detail.html
@@ -21,9 +21,6 @@
     <main id="main">
       <div class="card">
         <figure>
-          <div class="sell_or_search">
-            <img src="assets/search.svg" alt="search icon" />
-          </div>
           <img
             class="product_image"
             src="assets/products/afeitadora.jpg"
@@ -43,6 +40,10 @@
               odio. Ad praesentium, doloribus deleniti repellat adipisci iste
               totam vero?
             </p>
+          </div>
+          <div class="sell_or_search">
+            <img src="assets/search.svg" alt="search icon" />
+            <span>Se busca</span>
           </div>
           <div class="product_price">25€</div>
         </div>
