create folder structure and js files

--- a/product_create.html
+++ b/product_create.html
@@ -176,5 +176,6 @@
       </form>
     </main>
     <footer id="footer"></footer>
+    <script type="module" src="product_create/index.js"></script>
   </body>
 </html>
