--- a/index.html
+++ b/index.html
@@ -263,5 +263,6 @@
       </section>
     </main>
     <footer id="footer"></footer>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
