--- a/login.html
+++ b/login.html
@@ -70,5 +70,6 @@
       </form>
     </main>
     <footer id="footer"></footer>
+    <script type="module" src="login/index.js"></script>
   </body>
 </html>
