--- a/product_detail.html
+++ b/product_detail.html
@@ -57,5 +57,6 @@
       </div>
     </main>
     <footer id="footer"></footer>
+    <script type="module" src="product_detail/index.js"></script>
   </body>
 </html>
