--- a/register.html
+++ b/register.html
@@ -86,5 +86,6 @@
       </form>
     </main>
     <footer id="footer"></footer>
+    <script type="module" src="register/index.js"></script>
   </body>
 </html>
