register controller first commit

--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
   <body>
     <header id="header"></header>
     <main id="main">
-      <form class="form_main" action="">
+      <form class="form_main" action="" id="form-register">
         <div class="form_main__logo">
           <img src="assets/logo_portrait.svg" />
         </div>
@@ -73,7 +73,7 @@
             ></path>
           </svg>
           <input
-            placeholder="Repetir Password"
+            placeholder="Confirmar Password"
             id="confirmPassword"
             class="inputField"
             type="password"
