Add Register function and works

--- a/register.html
+++ b/register.html
@@ -32,9 +32,10 @@
           </svg>
           <input
             placeholder="Email"
-            id="username"
+            id="email"
             class="inputField"
             type="email"
+            name="email"
           />
         </div>
 
@@ -57,6 +58,7 @@
             class="inputField"
             type="password"
             minlength="6"
+            name="password"
           />
         </div>
         <div class="inputContainer">
@@ -78,6 +80,7 @@
             class="inputField"
             type="password"
             minlength="6"
+            name="confirmPassword"
           />
         </div>
 
