--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <body>
     <header id="header"></header>
     <main id="main">
-      <form class="form_main" action="">
+      <form class="form_main" action="" id="form-login">
         <div class="form_main__logo">
           <img src="assets/logo_portrait.svg" />
         </div>
@@ -35,6 +35,7 @@
             id="username"
             class="inputField"
             type="email"
+            name="email"
           />
         </div>
 
@@ -56,6 +57,7 @@
             id="password"
             class="inputField"
             type="password"
+            name="password"
           />
         </div>
 
