add login / logout control

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,11 +14,7 @@
       <div class="header__logo">
         <img src="assets/logo_horizontal.svg" />
       </div>
-      <div class="header_login">
-        <form action="">
-          <input type="submit" value="Registrate o inicia sesión" />
-        </form>
-      </div>
+      <div class="header_login" id="session"></div>
     </header>
     <main id="main">
       <section>
