Add button control for buttons login traffic

--- a/login.html
+++ b/login.html
@@ -61,12 +61,13 @@
           />
         </div>
 
-        <button id="button">Enviar</button>
+        <button id="submitButton">Enviar</button>
+
         <div class="signupContainer">
           <p>No tienes cuenta aun?</p>
           <div class="signupContainer__buttons">
-            <a href="#">Regístrate</a>
-            <a href="#">Salir</a>
+            <button id="registerButton">Regístrate</button>
+            <button id="exitButton">Salir</button>
           </div>
         </div>
       </form>
