fix button id for css

--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
           />
         </div>
 
-        <button id="button">Enviar</button>
+        <button id="submitButton">Enviar</button>
         <div class="signupContainer"></div>
       </form>
     </main>
