Add Register button  traffic logic

--- a/register.html
+++ b/register.html
@@ -85,7 +85,9 @@
         </div>
 
         <button id="submitButton">Enviar</button>
-        <div class="signupContainer"></div>
+        <div class="signupContainer">
+          <button id="exitButton">Salir</button>
+        </div>
       </form>
     </main>
     <footer id="footer"></footer>
