Delete html mockup for test on index

--- a/index.html
+++ b/index.html
@@ -40,223 +40,7 @@
           <input type="submit" value="Buscar" />
         </form>
       </section>
-      <section id="products_list">
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <div class="sell_or_search">
-              <img src="assets/sell.svg" alt="sell icon" />
-            </div>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-        <div class="card">
-          <figure>
-            <div class="sell_or_search">
-              <img src="assets/search.svg" alt="search icon" />
-            </div>
-            <img
-              class="product_image"
-              src="assets/products/afeitadora.jpg"
-              alt="Afeitadora"
-            />
-          </figure>
-          <div class="text-content">
-            <div class="product_name">Shaver</div>
-            <div class="product_description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero?
-            </div>
-            <div class="product_price">25€</div>
-          </div>
-        </div>
-      </section>
+      <section id="products_list"></section>
     </main>
     <footer id="footer"></footer>
     <script type="module" src="index.js"></script>
