Feature product_detail WIP

--- a/product_detail.html
+++ b/product_detail.html
@@ -14,41 +14,12 @@
       <div class="header__logo">
         <img src="assets/logo_horizontal.svg" />
       </div>
-      <div class="header_login">
-        <form action="">
-          <input type="submit" value="Registrate o inicia sesión" />
-        </form>
+       <div class="header_login" id="session"></div>
       </div>
     </header>
     <main id="main">
       <div class="card">
-        <figure>
-          <img
-            class="product_image"
-            src="assets/products/afeitadora.jpg"
-            alt="Afeitadora"
-          />
-        </figure>
-        <div class="text-content">
-          <div class="product_name">Shaver</div>
-          <div class="product_description">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-              aperiam accusantium facilis omnis quidem, quia architecto
-              laudantium beatae qui voluptatum odio. Ad praesentium, doloribus
-              deleniti repellat adipisci iste totam vero? Lorem ipsum dolor sit,
-              amet consectetur adipisicing elit. Ad, aperiam accusantium facilis
-              omnis quidem, quia architecto laudantium beatae qui voluptatum
-              odio. Ad praesentium, doloribus deleniti repellat adipisci iste
-              totam vero?
-            </p>
-          </div>
-          <div class="sell_or_search">
-            <img src="assets/search.svg" alt="search icon" />
-            <span>Se busca</span>
-          </div>
-          <div class="product_price">25€</div>
-        </div>
+        
       </div>
       <div class="footer_card">
         <button class="modify_product">Modificar</button>
