--- a/product_create.html
+++ b/product_create.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/product_create.css" />
     <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/loader.css" />
   </head>
   <body>
     <header id="header"></header>
