add loader section to html files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/loader.css" />
   </head>
   <body>
+    <section id="loader"></section>
     <header id="header">
       <div class="header__logo">
         <img src="assets/logo_horizontal.svg" />
@@ -44,6 +45,7 @@
       <section id="products_list"></section>
     </main>
     <footer id="footer"></footer>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
