--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/loader.css" />
   </head>
   <body>
+    <section id="loader"></section>
     <header id="header"></header>
     <main id="main">
       <form class="form_main" action="" id="form-login">
