--- a/product_detail.html
+++ b/product_detail.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/loader.css" />
   </head>
   <body>
+       <section id="loader"></section>
     <header id="header">
       <div class="header__logo">
         <img src="assets/logo_horizontal.svg" />
