add notifications section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </section>
       <section id="products_list"></section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <section id="notification"></section>
+    </footer>
 
     <script type="module" src="index.js"></script>
   </body>
