--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
         </div>
       </form>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer"><section id="notification"></section></footer>
     <script type="module" src="login/index.js"></script>
   </body>
 </html>
