--- a/product_create.html
+++ b/product_create.html
@@ -204,7 +204,7 @@
         </div>
       </form>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer"><section id="notification"></section></footer>
     <script type="module" src="product_create/index.js"></script>
   </body>
 </html>
