--- a/product_detail.html
+++ b/product_detail.html
@@ -25,7 +25,7 @@
       </div>
       
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer"><section id="notification"></section></footer>
     <script type="module" src="product_detail/index.js"></script>
   </body>
 </html>
