--- a/register.html
+++ b/register.html
@@ -92,7 +92,7 @@
         </div>
       </form>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer"><section id="notification"></section></footer>
     <script type="module" src="register/index.js"></script>
   </body>
 </html>
