--- a/product_create.html
+++ b/product_create.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/product_create.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/loader.css" />
+    <link rel="stylesheet" href="./css/notification.css">
   </head>
   <body>
     <section id="loader"></section>
